More talks of day 2

--- a/2022-06-13.md
+++ b/2022-06-13.md
@@ -52,6 +52,8 @@ Behind every product there are people.
 <!-- ## Ten Things We've learned from Running Production Infrastructures at Google, speaker was missing -->
 ## A tour of the Modern Java Platform
 
+James Ward
+
 What is modern: it a spectrum.
 There a small steps and leaps.
 
@@ -87,6 +89,8 @@ Java 11 Features:
  
 
 ## The pipeline driven organization
+
+Roy Osherove
 
 Author of `The Art of Unit-Testing`
 
@@ -312,6 +316,8 @@ Take small steps.
 
 ## Practical Tips and Tricks for CI/CD Success
 
+Zen Markan
+
 Thought experiment:
 You are getting ready to deploy something you works on for couple of weeks.
 You only need to press the button.
@@ -387,6 +393,8 @@ Prepare for it, have a run book.
 
 ## Prioritizing Technical Debt as if Time and Money Matters
 
+Adam Tornhill
+
 Lehmans laws' of software evilution:
 * Continuing Change - a system must be continually adapted or it will become progressively less satisfactory.
 * Increasing Complicity
@@ -443,7 +451,7 @@ Knowledge distribution.
 
 ## Shortening the Architecture Feedback Loop
 
-Eltjo Poort, CGI
+Eltjo R. Poort, CGI
 
 Combining Architecture with Agile.
 Too much architecture leads...
@@ -504,6 +512,8 @@ Get involved in the delivery.
 
 
 ## Agility is Inefficient
+
+Klaus Bucka-Lassen
 
 The art of delivering the wrong product four times fast. (fake book)
 Delivering faster gives a better chance to learn.
