--- a/2022-06-14.md
+++ b/2022-06-14.md
@@ -4,7 +4,7 @@
 
 Kevlin Henney
 
-Explains what a `Kevlin Henney Screen is`: Public displays showing blue/error screens.
+Explains what a `Kevlin Henney Screen` is: Public displays showing blue/error screens.
 
 All software is, is illusions.
 Executable fiction.
@@ -77,21 +77,443 @@ This is why the numbers reported by them where falling and not rising.
 An economic model coming from a broken spreadsheet caused a lot a death.
 This also caused problems during COVID in the UK.
 
-> History is a vast really warning system.
+> History is a vast, early warning system.
 
 We should learn from failures to make a difference.
 
  
 ## A Developer's Introduction to Developing in Web 3
 
+Roy Osherove
+
+The topic is controversial.
+Some application of this technology are unethical others are awesome.
+
+Exiting new technology.
+New interesting paradigms.
+Might allow new types of applications that where hard to build before.
+
+> Build on a blockchain if you **don't** want to have control.
+
+Web 1.0: Read-only.
+Web 2.0: Read-Write.
+Web 3.0: Read-Write-Own.
+You can proof that you own some thing.
+
+Core Concepts:
+* Decentralized: ownership is distributed among people
+* Permissionless: every one was equal access
+* Native payments: crypto currencies, logic has financials build on.
+* Trustless: not a person to trust, but to trust the smart contract
+
+Examples:
+* Currency (instead of state)
+* (partial) Ownership of proof (domains, identity etc..)
+* Collateralize Loans (instead of bank)
+* Escrow contracts (instead of bank)
+* Royalty payments (instead of spotify)
+
+We have not found the 'killer' application yet.
+
+What is a blockchain
+1. Distributed Trust
+1. Secure
+1. Independently Verifiable
+
+A chain of transaction blocks that are cryptographically linked.
+
+Proof of work is harmful.
+Proof of stake is the less energy consuming approach.
+
+Etherium as smart contracts in comparison to bitcoin.
+
+Smart Contracts:
+* Transaction protocols running on the blockchain (EVM - Etherium Virtual Machine)
+* The contracts are stored on the blockchain
+* You can not only append
+* Changing will require a new version
+
+Solidity:
+* variables in a contract will store data on the chain
+* calling a method will cost gas and will create a transaction
+
+One could implement a voting system.
+
+What it feels like?
+You can not change the code after deployment.
+You will have to do extensive testing.
+Storage is costly.
+Fat Protocols, thin applications.
+It's all visible.
+Your wallet is your identity.
+
+Learn:
+* cryptozombies.io
+* eattheblocks.com
+
+
 ## Java 2022: Containerized, Serverless, CloudNative
+
+Andrey Adamovich
+
+Automation Guy.
+2008 DevOps became mainstream.
+Looking at things that where added to the JVM in terms of automation.
+Nowadays not real wall between dev and ops.
+Wall of new confusion: Dev - DevOps.
+
+Definitions
+* cloud native: salable, modern, dynamic environment, loosely coupled resilient, ...
+* serverless: not about no server, just the server is not important
+
+12-factor application.
+1. 1 code = 1 app
+1. isolated dependencies
+1. build < release < run
+1. backing services - network resources
+1. log as event streams
+1. config from environment
+1. admin commands
+1. provided service = port bindings 
+1. stateless process
+1. concurrent
+1. disposable
+
+API-first, Telemetry, Authn and authz, ...
+
+The Monolith
+* e.g. Web Sphere
+* Deploying apps to a big application server
+* hard to optimize
+* scale vertical and scale horizontally
+
+Re-design: split up app that do not fit into a single app server.
+Allowed to scale independently, because traffic pattern of new parts are different.
+Tuning the JVM can be done way more specific to the use case, because it did not need to be general to the monolith.
+
+Splitting up is not scalable limitless because the cognitive load grows.
+
+J2EE -> JEE -> JakartaEE -> MicroProfile.
+MicroProfile is more composable and community driven.
+App server -> fat jar -> layers app.
+
+> Make JAR not WAR
+
+> Fat-less app
+
+Since JDK 8 can detect container limits, like CPU and Memory limits.
+In java 17 the container support got even better.
+The JVM will self-tune according to the limits, e.g. how many gc threads.
+`-XX:-UseContainerSupport` to disable it.
+
+GC in containers.
+1791 - tells the JVM which GC to use. 
+Will be serial-stop-the-world if memory is below.
+Microsoft was a nice page for which gc to use.
+
+Container images.
+base -> runtime -> libs -> code.
+With JDK 9 and the module system, we can fine tune runtime size.
+We have about ~70 modules in the JDK that can be composed.
+In most times we can get rid of unused modules with `jlink`.
+A java runtime can be as small as 13MB.
+Smaller JVM also decreases attack surface.
+Log4Shell could be prevent if the LDAP part was missing from your runtime.
+
+Obersability: Logs, Metrics, Traces.
+E.g. Prometheus JMX exporter.
+Akka or Spring Actuator.
+Jeager for traces.
+
+JFR: Java Flight Recorder.
+Free since JDK 11.
+You can inject own data with `jfr.Event`.
+With JFR you can stream the events since JDK 14.
+
+Serverless: FaaS JVM choices.
+Google uses G1...
+
+Graal VM: allows for native images.
+Reflection and other memory dynamic features will not work.
+Spring Native, Quarkus, Micronaut, Helidon.
+
+JVM allows for many different load-types.
+It's still evolving more.
+Java has a lot of 'golden path' (spotify term for deploying into production)
+
 
 ## The Psychology of UX
 
+Fabio Pereia
+
+This talk is for humans and for humans who interact with humans.
+Shows trailer of the Darron Brown netflix film 'The Push'.
+
+Have you been manipulated recently?
+We all haven been.
+E.g. Google did by just showing the first page with 10 results.
+You make 35.000 decision daily, mostly unconsciously.
+We make digital decisions.
+How many of the 35k are digital?
+A lot.
+There will be the meta verse.
+Alibaba digital shopping.
+We need to be conscious about our decisions.
+Augmented Reality in realastate. 
+
+Experiment: Bat and the ball cost 1.10$ the bat is 1$ more expensive than the ball?
+How Many cost the ball? 
+5cent.
+Book: `Thinking. Fast... Slow`.
+We often need to think fast.
+Because it make us survive.
+Stereotyping and shortcuts is what helps us.
+Whenever you think about a shortcut it might not be true.
+
+Game: 3 things in 1 Minute.
+1. Find someone you do not know
+1. Say hi my name is...
+1. Ask them what is your dream?
+
+Psychology: has a lot of sub categories.
+Cognitive Psychology, is used by behavioral economic.
+This can be used to hack human brains/decision making.
+Book: Predictable Irrational.
+Book: Nudge.
+We have bugs about decision making.
+
+We also have bugs in perceptions.
+Especially visual perception.
+
+Experiment: 3 types of subscriptions.
+1. Only 59 
+1. 125  (decoy option)
+1. both 125
+
+Options: A (-B) B.
+Also works for dating.
+
+Organ donor example, defaulting is very powerful.
+Digital default are also very powerful.
+Think about your defaults.
+
+Seamless experience.
+If you want people to do what you want make it seamless.
+Friction makes people stop.
+E.g. Amazon go store.
+
+Anticipatory Shipping - Amazon patent.
+Sending stuff before you need it.
+
+> I see biases.
+
+iPhone pricing - they use framing and middle option bias.
+
+The IKEA Effect - exaggerate high value. 
+If you build something is make you feel like you own it and it's the best result.
+Paper: Ikea effect - when labor turn to love.
+
+180 Biases are known/mapped.
+Each might be used to influence you.
+
+UX Design - included in every designing.
+Digital decision architect.
+Designer needs to know human psychology.
+
+There is the role Chief Behavior Officer.
+Talk: How behavior economics explains agile.
+
+Book: Digital Nudge.
+
+2 Roles
+1. Digital Decision Architect: Nudge for Good
+1. Digital Citizen: Be aware that you are nudged
+
+Persuasion <-> Coercion.
+What you need <-> What you don't want.
+
+Dark Pattern e.g. Sneak into the basket.
+Work only in the digital world.
+
+Attention and Time are the most scares resource in the first world.
+www.timewellspend.io
+
+Experience: 
+* take 3 conscious breath
+* ... some BS motivational speech
+
+
 ## Thinking Serverless: From user request to serverless solution
+
+James Beswick, AWS Developer Advocate
+
+Server - How do we use them
+* State management, 
+* monolithic container for functionality
+* One Version one Server
+* Server atomic unit of thinking
+* Has some management overhead
+* Is not efficient most times
+
+Setup for a wordpress hosting - quite complicated.
+Serverless aims to take away a lot of the overhead.
+
+Where to start with serverless?
+AWS Lambda
+* Runs on demand
+* Support many runtimes (also custom runtimes)
+* Responds to events
+* Is stateless
+* scales automatically
+
+Best practices
+* Avoid lifting and shifting (take server code and drop it in lambda)
+* 1 Lambda per purpose
+* Keep function small
+* Choose the right runtime (Task might differ per tasks)
+* Use functions for business logic and plumbing between services
+* include security
+
+General approach
+* Feature first, will avoid monolithic thinking
+* Focus on events, 
+* Statelessness, allows for scale
+* Data flow, not only a single data store, but many
+* Use the services, use services (AWS Services?!)
+
+Serverless is not just Lambda.
+API Gateway, DynamoDB, Lambda, S3, Step Functions.
+Event Bridge, SnS, Sqs, Kinesis IoTCore, Transcoder.
+Other services Recognition Comprehend Textract Transcribe Translate.
+
+Example: Create a serverless app that support a form submitted from a webpage.
+API Gateway -> Lambda -> DynamoDB. 
+Pattern can be applied to any CRUD.
+
+Req: Incoming responses need to be translated.
+Listen in Dynamo DB Event and trigger AWS Translate service. 
+
+Req: Aloows user to upload images.
+New Lambda that will be called by API Gateway to S3.
+The frontend will get a token from the lambda to directly upload to S3.
+
+Req: Email any negative comment immediately.
+Use Amazon Comprehend.
+New Lambda on dynamo DB Event and interpreted the review.
+Send email per SNS.
+
+Req: Only allow signed-in users to posr reviews.
+Use Cognito with the API Gateway.
+
+Example: Restaurant reservation app.
+Create a severless app to allow customers to reserve a table b sms test message.
+Pinpoint -> Lambda -> EventBridge -> Rule -> Lambda -> DynamoDB -> API Gateway <-> Web App.
+Not Realtime currently.
+
+Req: Add display showing upcoming reservations in real time.
+Rule -> Lambda -> IoT Core (WebSocket Subs) -> Frontend
+
+Req: Speak the name of guest when ready to seat table.
+Rule -> Lambda -> Polly (Voice synthesis, async) -> S3 -> Lambda -> IoT Core -> Frontend
+
+Req: Send daily reservation email.
+Rule (Scheduled) ->  Lambda -> SnS
+
+Req: Notify legacy app about reservation.
+Think about retry when calling the webhook.
+Rule -> API Destination (throttles message count, has retry) -> WebHook 
+
+AWS SAM - Serverless Application Model.
+CloudFormation translator.
+In YAML not as bad as cloud formation.
+
+Experiment with it it's cheap.
+Check the serverlessland.com, they have pattern.
+
+Questions:
+* When not to use serverless?: If latency is critical.
+* How to manage lambda function at scale?: SAM + CDK in CI/CD. 
+* How do you share code between functions? Use layers. Layers are immutable. You can use EFS as well.
+* Hot to handle the startup time lag (cold start): Pre-warm can help, use async design.
+* How to e2e test?: Lambdas are perfect for unit testing. Test against the cloud. Inject event in an event driven setup.
+* What about the cost?: Can be extremely cheap. Cost can occurs of use not recommended pattern. Don't call lambdas from lambdas.
+
 
 ## Explainable AI explained for Developers
 
+Joop Snijder, Williem Meints
+
+Auto ML: Training and Deploying ML Model.
+
+Scenario: Tasty Beans.
+Company provides Coffee subscription.
+One shipping company is good other is not so good.
+People are starting to leave.
+What the reason for this?
+Can be build a model to find people who are likely to cancel with an accuracy of 95%.
+
+Here Azure.
+
+Selected some features from the DB.
+* Product Rating
+* Delivery Quality
+* Who left
+
+ These models should be production ready.
+ What does it mean to have a production ready ml model.
+ * fair
+ * robust
+ * secure
+ * transparent
+
+Is the results of the model, what should we do.
+Try to figure out which feature caused the result.
+
+Why explainable AI?
+* Without explanation it's hard to understand the inner workings and ensure the results are correct
+* Current a new relation demand explanation of decision and affect people
+*  Without knowing why it's hard to derive actions to take
+
+interpretable AI
+* white-box models
+* explanation from the model
+* explainable upfront
+* model specific
+* e,g. Decision-Tree
+
+explainable AI
+* explainable afterwards
+* model agnostic
+
+Feature Importance Plot
+* Determine the influence of a feature on the output
+* Train model on randomized features and see the difference of the output
+
+Can we cluster the customers base on the outcome to determine actions?
+
+Global vs Local. 
+For each prediction explain why - this is a local explanation.
+Feature importance plot is a global explanation.
+
+Segmentation of the customers.
+With global explanation of a segment can help to derive business actions.
+Because it's not feasible to target the individual.
+
+Tabular data can be explained well with importance plot.
+Another approach is prediction breakdown, explain the model step by step.
+
+Other types of data might be natural language or commuter vision.
+
+Questions
+* How to choose the model to get a explainable models?: Certain models might be more explainable.
+* How can explainable be helpful if the domain is not easily explainable?: Feature engineering has to be done proper. You need to know what which feature actually means.
+* What does it mean for a model to be robust?: Model that can not be tricked easily is robust. Quality and Security of the model. Repeatable results.
+
+
 ## Cloud-Native Progressive Delivery
+
+Matt Turner
+
+
 
 ## The Importance of Laughter
