--- a/2022-06-14.md
+++ b/2022-06-14.md
@@ -514,6 +514,117 @@ Questions
 
 Matt Turner
 
+How does cloud native enabled this?
+In the beginning there is a process.
+Then there was the 12 factor-app.
+Process was put into a container.
+Separate build and run.
+Microsevices with Gateway and adapters microservice service.
+Kubernetes to for orchestration.
+Service Mesh e.g. Istio.
+Metrics from K8s and Istio for prometheus or others.
+Service Levels: SLA SLO SLI.
+
+Current Deployments.
+We all got CI/CD.
+Deployment - taking artifact and run it.
+Continuous Deploying - do the same continuously.
+Continuous Release - exposing new deployments to the user.
+Deploy != Release.
+Contract: each commit creates a new image and commits it to the registry.
+Git Ops.
+Deployments are triggered by new images. 
+Sending traffic to the new pod is the risky part.
+Initially do not send traffic to the container.
+We could use header to allow traffic with certain header to do some acceptance testing.
+Use automation here possibly.
+Non functional testing like SLO.
+Now send traffic to the new pod but do not send responses to the user. 
+Validate responses.
+Software is exposed to the user but the user is not exposed to the software.
+Release. Send tiny bit of traffic to the new release.
+The controller can handle all this automatically with metrics.
+
+Github for CD, flux for watching the image registry, Flagger progressive deployment operator.
+
+Image policy can define which versions will be released.
+
+Questions:
+* What about serverless? The principals possible also apply.
+* Who to handle state full requests? Cloud Native approach: handle state different. Event sourcing, tag with origin and filter out. Or use adapter to drop requests.
+* Istio vs Linkerd? Both are fine. Flagger can work with SMI implementations.
+* Can this work with ECS? Maybe. Pure EC2 yes with Istio.
+* Are gitops tools production ready? Yes, FLUX and Argo Rollout and Argo Events is also very solid.
 
 
 ## The Importance of Laughter
+
+Aino Vonge Corry, Ph.D
+
+Denmark one of the happiest people.
+Reason for that, very low expectations.
+Why do we want to listen?
+* You want to be funny
+* Your are interested in why people laugh and what do they laugh at.
+* Funniest yoke in the world
+
+> The life is lived forwards but you have to understand it backwards.
+
+Facilitation, laughing helps in difficult situations. 
+
+The frontal lobe will decide if you find something funny.
+The physical importance of laughter is well researched.
+It's a workout.
+It's an anti-depressant because it raises serotonin and endorphin and dopamine.
+
+The psychological importance of laughter.
+Defused intensity so you can use your intellect.
+
+Logos - what your are saying.
+Pathos - how exited you are.
+Ethos - who (they think) you are.
+You need 2 out of 3 for presenting.
+
+Use self deprecating humor at the beginning.
+
+We laugh to show that we understand.
+We show that we get that joke.
+A social laughter, belonging to a group.
+Jokes about a common enemy.
+
+Laughing can be used push people apart, like bullying.
+Humor can be very harmful.
+Jokes are never just a joke.
+They stem from a thought that was there in the first place.
+
+Banter - playful teasing.
+
+Can be use to pull people together.
+Funny people are perceived as smarter.
+
+Two types of laughter.
+1. the natural, being (mentally) tickled
+1. the post laughter, the social laughter
+
+Two kinds of smiles.
+1. Fake (Brodmanns are 24)
+1. Real (Brodmanns are 4)
+This can be seen by looking in the screen.
+
+We are mimicking the opponents expressions.
+People with botox injections have less empathy.
+
+Richard Feynman: Kick of the discovery.
+For each words said you will have a sub-tree of possible outcomes.
+When ever the outcome was not expected it might be funny.
+
+How to be funny?
+Timing is everything.
+Some jokes are only funny the first time.
+* Surprise
+* Belonging 
+* Clever
+* Common animosity
+* ...
+
+Book: Retrospectives Anti-pattern
