--- a/2022-06-14.md
+++ b/2022-06-14.md
@@ -206,10 +206,19 @@ In java 17 the container support got even better.
 The JVM will self-tune according to the limits, e.g. how many gc threads.
 `-XX:-UseContainerSupport` to disable it.
 
+<img style="height: 400px;" src="jvm_memory_areas.png" />
+<img style="height: 400px;" src="jvm_container_support.png" />
+
 GC in containers.
 1791 - tells the JVM which GC to use. 
+
+<img style="width: 300px;" src="gcs.png" />
+
 Will be serial-stop-the-world if memory is below.
 Microsoft was a nice page for which gc to use.
+
+<img style="height: 400px;" src="gc_comparison.png" />
+
 
 Container images.
 base -> runtime -> libs -> code.
@@ -232,6 +241,9 @@ With JFR you can stream the events since JDK 14.
 
 Serverless: FaaS JVM choices.
 Google uses G1...
+
+<img style="height: 400px;" src="azure_jvm_container.png" />
+<img style="height: 400px;" src="aws_jvm_container.png" />
 
 Graal VM: allows for native images.
 Reflection and other memory dynamic features will not work.
@@ -380,6 +392,8 @@ General approach
 * Statelessness, allows for scale
 * Data flow, not only a single data store, but many
 * Use the services, use services (AWS Services?!)
+
+<img style="height: 400px;" src="aws_serverless.png" />
 
 Serverless is not just Lambda.
 API Gateway, DynamoDB, Lambda, S3, Step Functions.
