--- a/2022-06-15.md
+++ b/2022-06-15.md
@@ -68,6 +68,8 @@ Organization does know.
 Nobody knows.
 What is actually needed.
 
+<img style="height: 300px;" src="computing_knows.png" />
+
 IBM Autonomic Computing principals.
 Book: **Engineering a Safer world**.
 
@@ -156,10 +158,16 @@ Lessons learned:
   Resources.
   External services.
 
+<p>
+<img style="height: 300px;" src="ms_lessons_learned.png" />
+</p>
+
 The domain.
 Old patterns: low coupling, high cohesion.
 Unix: do one thing that does one thing and does it well.
 SRP.
+
+<img style="height: 300px;" src="ms_old_pattern.png" />
 
 DDD.
 Bounded context: helps with large domains.
@@ -171,11 +179,15 @@ Aggregates: a group of associated objects.
 Easier in no-sql databases.
 Aggregate roots hold the reference to any aggregate object.
 
+<img style="height: 300px;" src="ms_aggregates.png" />
+
 Split into bounded context and then into aggregates.
 Matches REST well.
 Aggregate root is a resource.
 
 Entities. <skipped>
+
+<img style="height: 300px;" src="ms_architecture.png" />
 
 Services own their data.
 This is required to resolve the implicit bound via db.
@@ -207,6 +219,8 @@ You are not netflix.
 Do it for the right reason.
 Chaotic & Complex context.
 
+<img style="width: 450px;" src="ms_context.png" />
+
 1. Deliver small features
 1. In even shorter cycles
 1. With even smaller teams
@@ -214,6 +228,8 @@ Chaotic & Complex context.
 
 Solve a single problem per day.
 Never stop learning.
+
+<img style="height: 200px;" src="ms_speaker.png" />
 
 
 ## Structure and Interpretation of Test Cases
@@ -379,6 +395,8 @@ If you scale it gets harder.
 
 Books: Dynamic ReTeaming, Team Topologies, Investments unlimited.
 
+<img style="height: 300px;" src="dx_books.png" />
+
 Every improvement turns out as an additional check.
 All these increase cognitive load.
 Minimize intrinsic and eliminate extrinsic cognitive load.
@@ -388,6 +406,8 @@ Developer Exp is not about feelings but about productivity.
 The seamless experience.
 Remove the friction.
 See quarkus.
+
+<img style="height: 300px;" src="dx_quarkus.png" />
 
 Take the whole developer journey into account.
 From when he joins the company until he leaves.
@@ -433,6 +453,10 @@ Axon + klokwrk Framework is used for the internal developer platform.
    Helps to potentially re structure teams.
 
 Make teams small and they work simple.
+
+<p>
+<img style="height: 300px;" src="dx_perspectives.png" />
+</p>
 
 
 ## Welcome to a New Age of Refereeing
